--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#99CC00</color>
+    <color name="carmine">#D70040</color>
+    <color name="coral">#FF7F50</color>
 </resources>
